# tests

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
docs/: process_start.md  task.md
docs/UML/: Struct_prog.puml
include/: logger.h  process_start.h  types.h  yaml_parse.h
src/: logger.cpp  main.cpp  process_start.cpp  yaml_parce.cpp  yaml_parse.cpp
src/include/: process_start.h  yaml_parce.h  yaml_parse.h
tests/: example.yml  example_1.yml  tests.cpp  yaml_parse_test.cpp
tests/code_coverage/: CodeCoverage.cmake
tests/code_coverage/report/: index.html  index.include_logger.h.html  index.include_types.h.html  index.src_logger.cpp.html  index.src_main.cpp.html  index.src_process_start.cpp.html  index.src_yaml_parse.cpp.html  index.tests_unit_process_start_test.cpp.html  index.tests_unit_tests.cpp.html  index.tests_unit_yaml_parse_test.cpp.html
tests/integration/: CMakeLists.txt  hello.cpp  main.cpp  test_prog.cpp
tests/integration/include/: hello.hpp
tests/unit/: process_start_test.cpp  tests.cpp  yaml_parse_test.cpp
